--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.logger.com.kepler=error,console
+log4j.logger.com.kepler=info,console
 log4j.logger.com.kepler.com.caucho.hessian.io.SerializerFactory=error,console
 log4j.appender.console=org.apache.log4j.ConsoleAppender  
 log4j.appender.console.layout=org.apache.log4j.SimpleLayout  
